opam-version: "2.0"
version: "1.2.5"
synopsis: "OBus with Lwt+Unix transport — Unix sockets, server, session/system bus"
maintainer: "freyrnjordrson@gmail.com"
authors: [ "Jérémie Dimino" ]
homepage: "https://github.com/ocaml-community/obus"
bug-reports: "https://github.com/ocaml-community/obus/issues"
dev-repo: "git+https://github.com/ocaml-community/obus.git"
license: "BSD-3-Clause"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml"   {>= "4.08"}
  "dune"    {>= "2.0"}
  "obus"    {= version}
  "lwt"     {>= "4.3.0"}
  "lwt_ppx"
  "lwt_log"
  "lwt_react"
]
