(library
 (name obus_hal)
 (public_name obus.hal)
 (package obus-lwt-unix)
 (wrapped false)
 (libraries lwt obus obus.unix)
 (preprocess (pps lwt_ppx ppx_obus)))

(rule
 (targets hal_interfaces.ml hal_interfaces.mli)
 (deps    hal_interfaces.obus)
 (action
  (run obus-gen-interface -keep-common -o hal_interfaces %{deps})))
