(library
 (name obus_policy_kit)
 (public_name obus.policykit)
 (package obus-lwt-unix)
 (wrapped false)
 (libraries lwt obus obus.unix)
 (preprocess (pps lwt_ppx ppx_obus)))

(rule
 (targets policy_kit_interfaces.ml policy_kit_interfaces.mli)
 (deps    policy_kit_interfaces.obus)
 (action
  (run obus-gen-interface -keep-common -o policy_kit_interfaces %{deps})))
